@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 <PARAMETERS>
  
-  <NODE name="NoiseFilter">
+  <NODE name="NoiseFilterSGolay">
     <NODE name="1">
-    	<ITEM name="type" value="sgolay" type="string"/>
     	<NODE name="algorithm">
 	      <ITEM name="frame_length" value="9" type="int"/>
 	      <ITEM name="polynomial_order" value="4" type="int"/>
